--- a/public/skills/build-a-blog/index.html
+++ b/public/skills/build-a-blog/index.html
@@ -520,7 +520,7 @@ HUGO_ENABLEGITINFO = &quot;true&quot;</p>
 
         
 <div id="vcomments"></div>
-<script src="'https://unpkg.com/valine/dist/Valine.min.js'">
+<script src="https://unpkg.com/valine/dist/Valine.min.js">
     new Valine({
             el: '#vcomments',
             appId: '4eUjJFY4Y4wKW4TFpKb7izK5-gzGzoHsz',
