--- a/public/solutions/uva-6531/index.html
+++ b/public/solutions/uva-6531/index.html
@@ -559,7 +559,7 @@
 
         
 <div id="vcomments"></div>
-<script src="'https://unpkg.com/valine/dist/Valine.min.js'">
+<script src="https://unpkg.com/valine/dist/Valine.min.js">
     new Valine({
             el: '#vcomments',
             appId: '4eUjJFY4Y4wKW4TFpKb7izK5-gzGzoHsz',
