--- a/public/404.html
+++ b/public/404.html
@@ -107,7 +107,7 @@
 
 <meta name="twitter:card" content="summary" />
 
-<meta name="twitter:site" content="@Burningdian" />
+<meta name="twitter:site" content="@umuoy11" />
 <meta name="twitter:creator" content="@秋屿" />
 
     
