--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 <main class="h-screen overflow-y-auto">
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <h2 id="hi-there-im-umuoy-">Hi there, I&rsquo;m umuoy! 👋</h2>
-<p>Hi, I&rsquo;m umuoy, a Node.js Software Engineer from China. My name is the reversion of &ldquo;Youmu&rdquo;(妖夢, An anime character in <a href="https://en.wikipedia.org/wiki/Touhou_Project"  target="_blank" rel="noopener" >Touhou Project</a>)</p>
+<p>Hi, I&rsquo;m umuoy, a Node.js Software Engineer from China. My nickname is the reversion of &ldquo;Youmu&rdquo;(妖夢, An anime character in <a href="https://en.wikipedia.org/wiki/Touhou_Project"  target="_blank" rel="noopener" >Touhou Project</a>)</p>
 <ul>
 <li>⛵ I am 21 years old and will get a Bachelor of Engineering in CS in 2022</li>
 <li>💻 I used to work at <a href="https://www.maimemo.com/"  target="_blank" rel="noopener" >Maimemo</a> and <a href="https://tech.taobao.org/"  target="_blank" rel="noopener" >Taobao @Alibaba Group</a> as intern, focusing on BackEnd develop and Node.js.</li>
