--- a/public/index.html
+++ b/public/index.html
@@ -185,11 +185,11 @@
     <h2 id="hi-there-im-umuoy-">Hi there, I&rsquo;m umuoy! 👋</h2>
 <p>Hi, I&rsquo;m a Node.js Software Engineer from China. My nickname is mostly umuoy, means the reversion of &ldquo;Youmu&rdquo;(妖夢, An anime character in <a href="https://en.wikipedia.org/wiki/Touhou_Project"  target="_blank" rel="noopener" >Touhou Project</a>)</p>
 <ul>
-<li>⛵ I am 21 years old and will get a Bachelor of Engineering in CS in 2022</li>
+<li>⛵ I am 21 years old and will get a Bachelor of Engineering in CS in 2022.</li>
 <li>💻 I used to work at <a href="https://www.maimemo.com/"  target="_blank" rel="noopener" >Maimemo</a> and <a href="https://tech.taobao.org/"  target="_blank" rel="noopener" >Taobao @Alibaba Group</a> as intern, focusing on BackEnd develop and Node.js.</li>
 <li>🌱 I’m currently learning V8 and Rust.</li>
 <li>🐧 I love photography and coding and enjoy trying new things.</li>
-<li>💬 Ask me about anything <a href="https://github.com/umuoy1/umuoy1/issues"  target="_blank" rel="noopener" >here</a></li>
+<li>💬 Ask me about anything <a href="https://github.com/umuoy1/umuoy1/issues"  target="_blank" rel="noopener" >here</a>.</li>
 </ul>
 
   </div>
